Fixed dark mode
The colours looked funny when viewed with dark mode browser extensions.

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ html{
 
 body{
     display:block;
+    background-color: rgba(0,0,0,0);
     width: 100%;
     max-width: 800px;
     margin: auto;
